--- a/FlopEngine/FlopEngine.vcxproj
+++ b/FlopEngine/FlopEngine.vcxproj
@@ -128,12 +128,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="octree_help.cpp" />
-    <ClCompile Include="octree_window.cpp" />
+    <ClCompile Include="quadtree_help.cpp" />
+    <ClCompile Include="quadtree_window.cpp" />
     <ClInclude Include="flop_engine.hpp" />
-    <ClInclude Include="octree_help.hpp" />
-    <ClInclude Include="octree_implementation.hpp" />
-    <ClInclude Include="octree_window.hpp" />
+    <ClInclude Include="quadtree_help.hpp" />
+    <ClInclude Include="quadtree_implementation.hpp" />
+    <ClInclude Include="quadtree_window.hpp" />
     <None Include="packages.config" />
     <ClCompile Include="rectangle.cpp" />
     <ClCompile Include="vector2.cpp">
@@ -153,7 +153,7 @@
   <ItemGroup>
     <ClInclude Include="drawing.hpp" />
     <ClInclude Include="glut_functions.hpp" />
-    <ClInclude Include="octree.hpp" />
+    <ClInclude Include="quadtree.hpp" />
     <ClInclude Include="base_window.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
