--- a/FlopEngine/FlopEngine.vcxproj.filters
+++ b/FlopEngine/FlopEngine.vcxproj.filters
@@ -13,11 +13,11 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Исходные файлы\Boid">
-      <UniqueIdentifier>{f6eeee35-e7af-4784-92d6-4d207f500132}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Исходные файлы\Quadtree">
       <UniqueIdentifier>{e00214ed-6311-461d-b6a8-a9aa3c41ab8b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Исходные файлы\Boids">
+      <UniqueIdentifier>{f6eeee35-e7af-4784-92d6-4d207f500132}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -47,6 +47,21 @@
     </ClCompile>
     <ClCompile Include="quadtree_window.cpp">
       <Filter>Исходные файлы\Quadtree</Filter>
+    </ClCompile>
+    <ClCompile Include="boids_window.cpp">
+      <Filter>Исходные файлы\Boids</Filter>
+    </ClCompile>
+    <ClCompile Include="boid.cpp">
+      <Filter>Исходные файлы\Boids</Filter>
+    </ClCompile>
+    <ClCompile Include="math.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="flock.cpp">
+      <Filter>Исходные файлы\Boids</Filter>
+    </ClCompile>
+    <ClCompile Include="boids_helper.cpp">
+      <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -79,6 +94,21 @@
     </ClInclude>
     <ClInclude Include="quadtree_window.hpp">
       <Filter>Исходные файлы\Quadtree</Filter>
+    </ClInclude>
+    <ClInclude Include="boids_window.hpp">
+      <Filter>Исходные файлы\Boids</Filter>
+    </ClInclude>
+    <ClInclude Include="boid.hpp">
+      <Filter>Исходные файлы\Boids</Filter>
+    </ClInclude>
+    <ClInclude Include="math.hpp">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="flock.hpp">
+      <Filter>Исходные файлы\Boids</Filter>
+    </ClInclude>
+    <ClInclude Include="boids_helper.hpp">
+      <Filter>Исходные файлы\Boids</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
