--- a/FlopEngine/FlopEngine.vcxproj
+++ b/FlopEngine/FlopEngine.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="boid.cpp" />
     <ClCompile Include="boids_helper.cpp" />
     <ClCompile Include="boids_window.cpp" />
+    <ClCompile Include="file_observer.cpp" />
     <ClCompile Include="flock.cpp" />
     <ClCompile Include="marching_window.cpp" />
     <ClCompile Include="math.cpp" />
@@ -141,6 +142,7 @@
     <ClInclude Include="boid.hpp" />
     <ClInclude Include="boids_helper.hpp" />
     <ClInclude Include="boids_window.hpp" />
+    <ClInclude Include="file_observer.hpp" />
     <ClInclude Include="flock.hpp" />
     <ClInclude Include="flop_engine.hpp" />
     <ClInclude Include="json.hpp" />
