Partially implement blocker

--- a/FlopEngine/FlopEngine.vcxproj
+++ b/FlopEngine/FlopEngine.vcxproj
@@ -133,18 +133,19 @@
     <ClCompile Include="boid.cpp" />
     <ClCompile Include="boids_helper.cpp" />
     <ClCompile Include="boids_window.cpp" />
-    <ClCompile Include="file_observer.cpp" />
     <ClCompile Include="flock.cpp" />
     <ClCompile Include="marching_window.cpp" />
     <ClCompile Include="math.cpp" />
     <ClCompile Include="quadtree_help.cpp" />
     <ClCompile Include="quadtree_window.cpp" />
+    <ClInclude Include="blocker.hpp" />
     <ClInclude Include="boid.hpp" />
     <ClInclude Include="boids_helper.hpp" />
     <ClInclude Include="boids_window.hpp" />
     <ClInclude Include="file_observer.hpp" />
     <ClInclude Include="flock.hpp" />
     <ClInclude Include="flop_engine.hpp" />
+    <ClInclude Include="Header.h" />
     <ClInclude Include="json.hpp" />
     <ClInclude Include="marching_grid.hpp" />
     <ClInclude Include="marching_window.hpp" />
