--- a/FlopEngine/FlopEngine.vcxproj.filters
+++ b/FlopEngine/FlopEngine.vcxproj.filters
@@ -135,7 +135,7 @@
     <ClInclude Include="blocker.hpp">
       <Filter>Source\Utils</Filter>
     </ClInclude>
-    <ClInclude Include="Header.h">
+    <ClInclude Include="concepts.hpp">
       <Filter>Source\Utils</Filter>
     </ClInclude>
   </ItemGroup>
